--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,6 +27,9 @@
                     <a class="nav-link" href="{% url 'account:my-profile' request.user.id %}">Change Profile</a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'account:save-signals' %}">Save Signals Show</a>
+                </li>
+                <li class="nav-item active">
                     {% else %}
                     <a class="nav-link active" href="{% url 'account:login' %}">Login</a>
                 </li>
