--- a/src/templates/save_signals.html
+++ b/src/templates/save_signals.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
     {% block content %}
-<table class="table table-sm table-success">
+<table class="table-bordered table-striped">
   <thead>
     <tr>
-      <th scope="col">ID</th>
-      <th scope="col">DATA_CHANGES</th>
-      <th scope="col">TYPE_CHANGES</th>
-      <th scope="col">INFO_CHANGES</th>
+      <th scope="col" style="width:5%">ID</th>
+      <th scope="col" style="width:20%">DATA_CHANGES</th>
+      <th scope="col" style="width:20%">TYPE_CHANGES</th>
+      <th scope="col" style="width:55%">INFO_CHANGES</th>
     </tr>
   </thead>
   <tbody>
